[gd_scene load_steps=4 format=3 uid="uid://dnnkkunu4agl6"]

[ext_resource type="Script" path="res://DreamyJumpScare.gd" id="1_c61sy"]
[ext_resource type="Texture2D" uid="uid://ex3ts40ed33h" path="res://sprites/Screenshot_2024-04-02_160547-removebg-preview.png" id="2_yxnpr"]
[ext_resource type="AudioStream" uid="uid://djbp7cjmh24vy" path="res://audio/WhatsApp Video 2024-04-06 at 19 (mp3cut.net).mp3" id="3_d3v22"]

[node name="DreamyJumpScare" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_c61sy")

[node name="dreamy" type="Sprite2D" parent="."]
position = Vector2(886, 810)
scale = Vector2(3, 3)
texture = ExtResource("2_yxnpr")

[node name="JumpScareSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_d3v22")
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]
process_mode = 3
wait_time = 5.4
one_shot = true

[connection signal="dreamy_jumpscare" from="." to="." method="_on_dreamy_jumpscare"]
[connection signal="finished" from="JumpScareSound" to="." method="_on_jump_scare_sound_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
